tests/sources/invalid/arrays/array_element_assignment_missing_expr.fire
// Missing expression after an array-element assignment.
int32 main() {
    int32[] arr = [1, 2];
    arr[0] = ;  //~ ERROR FS-PARSE-0012 @14
    //~^ ERROR FS-PARSE-0010 @15
    return 0;
}
